syntax = "proto3";
package comment;

message EmptyResponse {
}

message PublishRequest {
  int64 obj_id = 1;
  int32 obj_type = 2;
  int64 comment_id = 3;
  int64 author_uid = 4;
  int64 uid = 5;
  int64 root = 6;
  int64 parent = 7;
  int32 ip = 8;
  int64 create_time = 9;
  string message = 10;
}

message ListRequest {
  int64 obj_id = 1;
  int32 obj_type = 2;
  int64 root = 3;
  int32 floor = 4;
  int32 offset = 5;
  int32 list_type = 6;
}

message CommentItem {
  int64 obj_id = 1;
  int32 obj_type = 2;
  int64 comment_id = 3;
  int64 uid = 4;
  int64 root = 5;
  int64 parent = 6;
  int32 floor = 7;
  int32 like = 8;
  int32 hate = 9;
  int32 count = 10;
  int32 ip = 11;
  int64 create_time = 12;
  string message = 13;
}

message CommentList {
  repeated CommentItem list = 1;
}

message CreateRequest {
  PublishRequest create = 1;
}

message ReplyRequest {
  PublishRequest reply = 1;
}

message DeleteRequest {
  int64 obj_id = 1;
  int32 obj_type = 2;
  int64 comment_id = 3;
  int64 uid = 4;
}

message ListResponse {
  CommentList list = 1;
  map<int64, CommentList> sub_map = 2;
}

message SubListResponse {
  CommentItem item = 1;
  CommentList list = 2;
}

service Comment {
  rpc CreateComment (CreateRequest) returns (EmptyResponse) {}
  rpc ReplyComment (ReplyRequest) returns (EmptyResponse) {}
  rpc DeleteComment (DeleteRequest) returns (EmptyResponse) {}
  rpc GetCommentList (ListRequest) returns (ListResponse) {}
  rpc GetCommentSubList (ListRequest) returns (SubListResponse) {}
}
